--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
 .memory-card:hover {
     transform: translateY(-2px) scale(1.01);
     box-shadow: 0 6px 15px -4px rgba(0, 0, 0, 0.08);
+    cursor: pointer;
 }
 
 .heart {
@@ -84,4 +85,8 @@ body {
 
 .dot-gabriela {
     background-color: #e75480; /* rosa */
+}
+
+.rotate-180 {
+    transform: rotate(180deg);
 }
