Atualizar o style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("letter-list.css");
 @import url("user.css");
 @import url("header.css");
-@import url("carta.css");
+@import url("letter.css");
 @import url("ai.css");
 @import url("new-memory.css");
 @import url("memory.css");
